--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -248,6 +248,19 @@ hr.profile {
   border: 1px dashed $lightest-gray;
   } 
 
+.tooltip-inner {
+  background-color: $bubboli-red;
+  }
+  
+.tooltip.right .tooltip-arrow {
+top: 50%;
+left: 0;
+margin-top: -5px;
+border-top: 5px solid transparent;
+border-right: 5px solid $bubboli-red;
+border-bottom: 5px solid transparent;
+  }
+
 .btn.primary {
   background-color: $bubboli-red;
 
