--- a/app/views/children/_new.html.erb
+++ b/app/views/children/_new.html.erb
@@ -12,7 +12,7 @@ $(function() {
   <%= select_tag :relation_type_ids, options_from_collection_for_select(RelationType.non_parent, "id", "name") %>
   
   <br><br>
-  <span style="float: left; margin-left: 3px; margin-top: 1px"><%= check_box_tag :invite, true %></span> 
+  <span style="float: left; margin-left: 3px; margin-top: 1px"><%= check_box_tag :invite, true, {:checked => "checked"} %></span> 
   <span style="float: left; margin-left: 6px; margin-top: 1px"><%= label_tag 'Alert'%></span>
   <span style="float: left; margin-left: 3px; margin-top: 1px; margin-right: 2px"><%= label_tag 'Parent'%></span>
   
