--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -1,10 +1,10 @@
 <% content_for :head do %>
   <meta property="og:image" content="<%= @gift.gift_images.first.image_url(:large_pic) %>" />
-  <meta property="og:title" content="<%= @page_title %>" />
+  <meta property="og:title" content="<%= @@gift.name %>" />
   <meta property="og:description" content="<%= truncate(simple_format(@gift.description), :length => 118) %>"/>
 <% end %>
 
-<script type="text/javascript">var switchTo5x=true;</script>
+<!-- <script type="text/javascript">var switchTo5x=true;</script> -->
 <!-- <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "271e0905-d30e-4bc4-af9d-b574b6eda513"}); </script> -->
 
