fixed meta tag typo in show gifts page

--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :head do %>
   <meta property="og:image" content="<%= @gift.gift_images.first.image_url(:large_pic) %>" />
-  <meta property="og:title" content="<%= @@gift.name %>" />
+  <meta property="og:title" content="<%= @gift.name %>" />
   <meta property="og:description" content="<%= truncate(simple_format(@gift.description), :length => 118) %>"/>
 <% end %>
 
