--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <%= favicon_link_tag %>
-  <%= content_for?(:head) ? yield(:head) : '' %>
+  <%= yield :head %>
   
   
 <% # Adding google analytics below %>  
