--- a/app/views/users/thankyou.html.erb
+++ b/app/views/users/thankyou.html.erb
@@ -1,3 +1,7 @@
 <div class="container">
-Thank you for signing up for Bubboli.  Please check your email for a confirmation email.  
+<p class="qikki-font" style="font-size: 18px; color: #53868B; text-align: center">Thank you for signing up for Bubboli.  Please check your email for a confirmation email.</p>  
+  
+<p class="qikki-font" style="font-size: 12px; color: #53868B; text-align: center">Make sure to check the spam box, just in case.</p>
+
+<div style="text-align: center"><%= check_email %></div>
 </div>
