fixed the source of logo on emails

--- a/app/views/friend_alert_mailer/friend_alert.html.erb
+++ b/app/views/friend_alert_mailer/friend_alert.html.erb
@@ -55,7 +55,9 @@
                           <td style="/*@editable*/ color:#202020; font-family:Arial; font-size:34px; font-weight:bold; line-height:100%; padding:0; text-align:center; vertical-align:middle;">
                             <!-- // Begin Module: Standard Header Image \\ -->
                           	<div style="text-align: left">
-                          	  <img alt="Bubboli" src="http://www.bubboli.com/assets/BubboliLogo-085ca4d853b37df4b3ac839940e32ede.png" style="max-width:600px;" style="max-width:600px !important;" mc:label="header_image" mc:edit="header_image" mc:allowdesigner="" mc:allowtext="">
+                              <a href="http://www.bubboli.com" target="_blank">
+                                <img alt="Bubboli" src="http://www.bubboli.com//assets/BubboliLogo-f8e1fee0c144b6f87029a3b6a6a2954d.png" style="max-width:600px;" style="max-width:600px !important;" mc:label="header_image" mc:edit="header_image" mc:allowdesigner="" mc:allowtext="">
+                              </a>
                           	</div>
                           	<!-- // End Module: Standard Header Image \\ -->
                           </td>
@@ -171,15 +173,15 @@
                                           <span valign="middle" style="color: #53868B; font-weight: normal; font-size: 15px;">LET'S BE FRIENDS</span>
                                           &nbsp; &nbsp; &nbsp;
                                           <a href="http://www.facebook.com/bubboli" style="color: #53868B; font-weight: normal; text-decoration: none" target="_blank">
-                                            <img align="none" alt="facebook" height="28" width="28" src="http://bubboli-kids-staging.herokuapp.com/assets/facebook-1b2ef8ce990d2d5128b991439c823ff2.jpg" style="width: 28px; min-height: 28px; border: 0; 
+                                            <img align="none" alt="facebook" height="28" width="28" src="http://www.bubboli.com//assets/facebook-1b2ef8ce990d2d5128b991439c823ff2.jpg" style="width: 28px; min-height: 28px; border: 0; 
                                             line-height: 100%; outline: none; text-decoration: none; display: inline"></a>
                                             &nbsp; &nbsp; &nbsp;
                                           <a href="http://www.twitter.com/bubboli" style="color: #53868B; font-weight: normal; text-decoration: none" target="_blank">
-                                            <img align="none" alt="twitter" height="28" width="28" src="http://bubboli-kids-staging.herokuapp.com/assets/twitter-8e83259a680f80ec6cad0523566058bc.jpg" style="width: 28px; min-height: 28px; border: 0; 
+                                            <img align="none" alt="twitter" height="28" width="28" src="http://www.bubboli.com//assets/twitter-8e83259a680f80ec6cad0523566058bc.jpg" style="width: 28px; min-height: 28px; border: 0; 
                                             line-height: 100%; outline: none; text-decoration: none; display: inline"></a>
                                             &nbsp; &nbsp; &nbsp;
                                           <a href="http://www.pinterest.com/bubboli" style="color: #53868B; font-weight: normal; text-decoration: none" target="_blank">
-                                            <img align="none" alt="pinterest" height="28" width="28" src="http://bubboli-kids-staging.herokuapp.com/assets/pinterest-75c7580fa4d94516aa6f4b0f1b5ea77b.jpg" style="width: 28px; min-height: 28px; border: 0; 
+                                            <img align="none" alt="pinterest" height="28" width="28" src="http://www.bubboli.com//assets/pinterest-75c7580fa4d94516aa6f4b0f1b5ea77b.jpg" style="width: 28px; min-height: 28px; border: 0; 
                                             line-height: 100%; outline: none; text-decoration: none; display: inline"></a>
                                             &nbsp; &nbsp; &nbsp;
                                             <span style="color: #53868B; font-weight: normal; font-size: 15px;">STAY CONNECTED</span>
