--- a/app/views/user_mailer/account_confirmation.html.erb
+++ b/app/views/user_mailer/account_confirmation.html.erb
@@ -29,7 +29,9 @@
                           <td style="/*@editable*/ color:#202020; font-family:Arial; font-size:34px; font-weight:bold; line-height:100%; padding:0; text-align:center; vertical-align:middle;">
                             <!-- // Begin Module: Standard Header Image \\ -->
                           	<div style="text-align: left">
-                          	  <img alt="Bubboli" src="http://www.bubboli.com/assets/BubboliLogo-085ca4d853b37df4b3ac839940e32ede.png" style="max-width:600px;" style="max-width:600px !important;" mc:label="header_image" mc:edit="header_image" mc:allowdesigner="" mc:allowtext="">
+                              <a href="http://www.bubboli.com" target="_blank">
+                                <img alt="Bubboli" src="http://www.bubboli.com//assets/BubboliLogo-f8e1fee0c144b6f87029a3b6a6a2954d.png" style="max-width:600px;" style="max-width:600px !important;" mc:label="header_image" mc:edit="header_image" mc:allowdesigner="" mc:allowtext="">
+                              </a>
                           	</div>
                           	<!-- // End Module: Standard Header Image \\ -->
                           </td>
