--- a/app/views/gift_alert_mailer/gift_alert.html.erb
+++ b/app/views/gift_alert_mailer/gift_alert.html.erb
@@ -119,7 +119,7 @@
                                       <tr>
                                         <td style="background-color:#6FAE4D; height: 25px; padding:6px; width:150px; text-align:center; font-family:Arial; 
                                         font-size:15px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;">                                      
-                                          <a href="<%= @page %>" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">CONFIRM THIS GIFT</span></a>                                      
+                                          <a href="<%= approve_url(@gift_accession.gift_accession_token) if @gift_accession.gift_accession_token %>" target="_blank" style="color: #FFFFFF; text-decoration: none;"><span style="color: #FFFFFF;">CONFIRM THIS GIFT</span></a>                                      
                                         </td>
                                       </tr>
                                     </table>
