changed email image for gifts back to original

--- a/app/views/gift_alert_mailer/gift_alert.html.erb
+++ b/app/views/gift_alert_mailer/gift_alert.html.erb
@@ -104,7 +104,7 @@
                                 
                                 <!-- // Begin Module: Gift Accession \\ -->
                                 <td valign="top" style="border-collapse: collapse">
-                                  <%= image_tag @image %>
+                                  <%= image_tag @gift.gift_images.first.image_url(:thumb_pic) %>
                                 </td>
                                 <td>  
                                   <div style="color: #505050; font-family: Arial; font-size: 14px; line-height: 150%; text-align: left; max-width: 160px;">
