added font awesome

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1419,3 +1419,13 @@ ul.photos-collage li {
   margin-top: -50px;
   text-align: top;
   }
+
+
+/*==================================================
+ * FONT AWESOME
+ * ===============================================*/
+ 
+.icon-question-sign {
+  color: $dark-green-blue;
+  font-size: 1.2em;
+  }
