--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :head do %>
-  <meta property="og:image" content="<%= @blog.blog_image.first.image_url(:large_pic) %>" />
+  <meta property="og:image" content="<%= @blog.blog_image.image_url(:large_pic) %>" />
   <meta property="og:title" content="<%= @blog.title %>" />
   <meta property="og:description" content="<%= truncate(@blog.content, :length => 128) %>"/>
 <% end %>
