--- a/app/views/children/_new.html.erb
+++ b/app/views/children/_new.html.erb
@@ -18,7 +18,7 @@ $(function() {
   
   <div id="example">
   <a class="tip" data-toggle="tooltip" data-placement="right" title="By clicking this, we will alert the parent
-  that you love their bubbies and wish to be reminded of their birthday."><i class="icon-question-sign"></i></a>
+  that you love their bubbie and wish to be reminded of their birthday."><i class="icon-question-sign"></i></a>
   </div>
   
   <%= hidden_field_tag :invitee, invitee %>
