--- a/app/views/layouts/gift.html.erb
+++ b/app/views/layouts/gift.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
   <%= favicon_link_tag %>
   <%= content_for?(:head) ? yield(:head) : '' %>
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
 <% # Adding google analytics below %>  
   <script type="text/javascript">
