changed font awesome to have no underline on hover

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1426,6 +1426,7 @@ ul.photos-collage li {
  * ===============================================*/
  
 .icon-question-sign {
+  text-decoration: none !important;
   color: $dark-green-blue;
   font-size: 1.2em;
-  }
+  }  
