--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -71,13 +71,11 @@ $(function() {
         <% link = "http://"+@gift.permalink %>
         
         <% if @gift.merchant == "Amazon" %>
-          <%= link_to buy_from_amazon, link, :target => "_blank" %><a class="tip" data-toggle="tooltip" data-placement="right" title="By purchasing this product through this link, Bubboli
-          receives a small commission, at no additional cost to you, for the sale.  This commission will help fund site-related expenses. Thank you.">
-          <i class="icon-question-sign"></i></a><br><br>
+          <%= link_to buy_from_amazon, link, :target => "_blank" %>&nbsp<a class="tip" data-toggle="tooltip" data-placement="right" title="By purchasing this product through this link, Bubboli
+          receives a small commission, at no additional cost to you, for the sale.  This commission will help fund site-related expenses. Thank you."><i class="icon-question-sign"></i></a><br><br>
         <% else %>
-          <div class="btn green white-link"><%= link_to "Buy It from #{@gift.merchant}", link, :target => "_blank" %></div><a class="tip" data-toggle="tooltip" data-placement="right" title="By purchasing this product through this link, Bubboli
-          receives a small commission, at no additional cost to you, for the sale.  This commission will help fund site-related expenses.  Thank you.">
-          <i class="icon-question-sign"></i></a><br><br>
+          <div class="btn green white-link"><%= link_to "Buy It from #{@gift.merchant}", link, :target => "_blank" %></div>&nbsp<a class="tip" data-toggle="tooltip" data-placement="right" title="By purchasing this product through this link, Bubboli
+          receives a small commission, at no additional cost to you, for the sale.  This commission will help fund site-related expenses.  Thank you."><i class="icon-question-sign"></i></a><br><br>
         <% end %>        
         
         <!-- ShareThis Button BEGIN -->
