--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -62,14 +62,7 @@ $(function() {
         <div>
           <%= render(:partial => "related_gifts")%>
         </div>
-        
-        <% unless @gift.sku.blank? %>
-        <div>
-          <h4 class="qikki-font" style="color: #53868B">Reviews from Amazon</h4><br>
-          <iframe src="<%= @iframe_url.gsub("&amp;", "&") %>" width="700" height="400" scrolling="yes"></iframe>
-        </div>
-        <% end %>
-        
+            
         <br>
         
     </div>
@@ -105,16 +98,6 @@ $(function() {
         <!-- AddThis Button END -->
       </div>
       
-     <div class="row"> 
-        <% unless @gift.sku.blank? %>
-        <div class="abridged-amazon-reviews">
-          <iframe src="<%= @iframe_url.gsub("&amp;", "&") %>" width="240" height="220" scrolling="no" frameborder="0"></iframe>
-        </div>
-        <% end %>
-      </div>
-      
-
-
       <div class="row gift-buy-box2">
         <h4 style= "color: #53868B; text-align: center">Product Statistics</h4>
         <h5 style= "color: #53868B;">For Ages:</h5>
@@ -135,5 +118,16 @@ $(function() {
       
     </div>
     
-  </div>  
+  </div> 
+  
+ 
+  
+  <% unless @gift.sku.blank? %>
+   <hr class="tab-content-line">
+    <div>
+      <h4 class="qikki-font" style="color: #53868B">Reviews from Amazon</h4><br>
+      <iframe class="iframe" src="<%= @iframe_url.gsub("&amp;", "&") %>" width="940" height="400" scrolling="auto" ></iframe>
+    </div>
+  <% end %>
+   
 </div>
