changed price error email

--- a/app/views/price_error_mailer/price_error.html.erb
+++ b/app/views/price_error_mailer/price_error.html.erb
@@ -3,7 +3,7 @@
 <br>
 
 <% @gifts.each do |gift| %>
-  <%= gift.name %>
-  <%= gift.id %><br>
+  gift name: <%= gift.name %><br>
+  id: <%= gift.id %><br>
   
 <% end %>
