--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <meta property="og:image" content="<%= bubboli %>" />
+<% end %>
+
 <div class="container">
   <div class="index-background">  
     <div class="row">
