added bubboli square logo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <% content_for :head do %>
-  <meta property="og:image" content="<%= bubboli %>" />
+  <meta property="og:image" content="<%= bubboli_square %>" />
 <% end %>
 
 <div class="container">
