changed bubboli square logo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <% content_for :head do %>
-  <meta property="og:image" content="<%= bubboli_square %>" />
+  <meta property="og:image" content="http://www.bubboli.com//assets/bubboli-logo-square-702bbb43fb322e654926771685ef0e5b.png" />
 <% end %>
 
 <div class="container">
