--- a/app/views/friend_alert_mailer/friend_alert.html.erb
+++ b/app/views/friend_alert_mailer/friend_alert.html.erb
@@ -110,7 +110,7 @@
                           	  </tr>
                           	  
                           	  <tr>
-                          	  <td style="color:#707070; font-size: 15px; line-height:150%;">Help <%= @user.first_name %> avoid duplicate gifting by <a href="<%= @page %>" style="color:#ff6f6a;
+                          	  <td style="color:#707070; font-size: 15px; line-height:150%;">Help <%= @user.first_name %> avoid duplicate gifting by <a href="<%= confirm_relationship_url(@relationship.relation_token) if @relationship.relation_token %>" style="color:#ff6f6a;
                               font-weight:normal;text-decoration:none" target="_blank">accepting </a> the friendship so they can see what's already been purchased
                               for <%= @child.first_name %>.</td>
                               </tr>
