--- a/app/views/gift_recommendation_mailer/gift_recommendation.text.erb
+++ b/app/views/gift_recommendation_mailer/gift_recommendation.text.erb
@@ -1,36 +1,36 @@
 Hi, <%= @user %>
 ===============================================
  
-You are receiving this letter because... 
+<%= @child.first_name %>'s birthday is coming up soon! Below are the gift recommendations based on your preferences. Happy gifting!
 
 
-<%= image_tag @gifts[0].gift_images.first.image_url(:thumb_pic) if @gifts[0] %>
-<%= @gifts[0].name if @gifts[0] %>
+<a href="<%= gift_url(@gifts[0]) if @gifts[0] %>" target="_blank" style="color: #53868B;"><%= image_tag @gifts[0].gift_images.first.image_url(:thumb_pic) if @gifts[0] %></a>
+<a href="<%= gift_url(@gifts[0]) if @gifts[0] %>" target="_blank" style="color: #53868B;"><%= @gifts[0].name if @gifts[0] %></a>
 <%= @gifts[0].description.truncate(100) if @gifts[0] %>
 
 
-<%= image_tag @gifts[1].gift_images.first.image_url(:thumb_pic) if @gifts[1] %>
-<%= @gifts[1].name if @gifts[1] %>
+<a href="<%= gift_url(@gifts[1]) if @gifts[1] %>" target="_blank" style="color: #53868B;"><%= image_tag @gifts[1].gift_images.first.image_url(:thumb_pic) if @gifts[1] %></a>
+<a href="<%= gift_url(@gifts[1]) if @gifts[1] %>" target="_blank" style="color: #53868B;"><%= @gifts[1].name if @gifts[1] %></a>
 <%= @gifts[1].description.truncate(100) if @gifts[1] %>
 
 
-<%= image_tag @gifts[2].gift_images.first.image_url(:thumb_pic) if @gifts[2] %>
-<%= @gifts[2].name if @gifts[2] %>
+<a href="<%= gift_url(@gifts[2]) if @gifts[2] %>" target="_blank" style="color: #53868B;"><%= image_tag @gifts[2].gift_images.first.image_url(:thumb_pic) if @gifts[2] %></a>
+<a href="<%= gift_url(@gifts[2]) if @gifts[2] %>" target="_blank" style="color: #53868B;"><%= @gifts[2].name if @gifts[2] %></a>
 <%= @gifts[2].description.truncate(100) if @gifts[2] %>
 
 
-<%= image_tag @gifts[3].gift_images.first.image_url(:thumb_pic) if @gifts[3] %>
-<%= @gifts[3].name if @gifts[3] %>
+<a href="<%= gift_url(@gifts[3]) if @gifts[3] %>" target="_blank" style="color: #53868B;"><%= image_tag @gifts[3].gift_images.first.image_url(:thumb_pic) if @gifts[3]%></a>
+<a href="<%= gift_url(@gifts[3]) if @gifts[3] %>" target="_blank" style="color: #53868B;"><%= @gifts[3].name if @gifts[3] %></a>
 <%= @gifts[3].description.truncate(100) if @gifts[3] %>
 
 
-<%= image_tag @gifts[4].gift_images.first.image_url(:thumb_pic) if @gifts[4] %>
-<%= @gifts[4].name if @gifts[4] %>
+<a href="<%= gift_url(@gifts[4]) if @gifts[4] %>" target="_blank" style="color: #53868B;"><%= image_tag @gifts[4].gift_images.first.image_url(:thumb_pic) if @gifts[4] %></a>
+<a href="<%= gift_url(@gifts[4]) if @gifts[4] %>" target="_blank" style="color: #53868B;"><%= @gifts[4].name if @gifts[4] %></a>
 <%= @gifts[4].description.truncate(100) if @gifts[4] %>
 
 
-<%= image_tag @gifts[5].gift_images.first.image_url(:thumb_pic) if @gifts[5] %>
-<%= @gifts[5].name if @gifts[5] %>
+<a href="<%= gift_url(@gifts[5]) if @gifts[5] %>" target="_blank" style="color: #53868B;"><%= image_tag @gifts[5].gift_images.first.image_url(:thumb_pic) if @gifts[5] %></a>
+<a href="<%= gift_url(@gifts[5]) if @gifts[5] %>" target="_blank" style="color: #53868B;"><%= @gifts[5].name if @gifts[5] %></a>
 <%= @gifts[5].description.truncate(100) if @gifts[5] %>
 
 
